# todo_app_poetry

todo_app/: README.md  database.py  local.env  pyproject.toml  python_console_client.py  requirements.txt  streamlit_client.py
todo_app/tests/: test_api.py
todo_app/todo_app/: main.py
